--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^16.11.38",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/redux-thunk": "^2.1.0",
+    "antd": "^4.16.9",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "react": "^18.1.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
