--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^0.21.1",
     "moment": "^2.29.1",
     "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
@@ -49,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
